# rust-playground

./: .gitignore  Cargo.toml  TESTE.md
migrations/: 1763501330_create_users_table.sql  1763501331_create_tasks_table.sql
src/: lib.rs
src/lib/: migrate_to_latest.rs
