[package]
name = "rust-test"
version = "0.1.0"
edition = "2024"
default-run = "rust-test"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
axum = "0.8.6"
cpal = "0.16.0"
hound = "3.5.0"
libsql = "0.9.26"
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
